--- a/index.cancelamentos.html
+++ b/index.cancelamentos.html
@@ -338,31 +338,59 @@
   }
 
   function responderPergunta() {
-    const input = document.getElementById("chatInput");
-    const pergunta = input.value.trim();
-    if (!pergunta) return;
+  const input = document.getElementById("chatInput");
+  const pergunta = input.value.trim().toLowerCase();
+  if (!pergunta) return;
 
-    adicionarMensagem("Você", pergunta);
-    input.value = "";
+  adicionarMensagem("Você", pergunta);
+  input.value = "";
 
-    let resposta = "Desculpe, não entendi sua pergunta.";
-    const mesAnterior = new Date();
-    mesAnterior.setMonth(mesAnterior.getMonth() - 1);
-    const mesAnteriorStr = mesAnterior.toISOString().slice(0, 7);
+  let resposta = "Desculpe, não entendi sua pergunta.";
+  const mesAtual = new Date().toISOString().slice(0, 7);
+  const mesAnterior = new Date();
+  mesAnterior.setMonth(mesAnterior.getMonth() - 1);
+  const mesAnteriorStr = mesAnterior.toISOString().slice(0, 7);
 
-    if (/cancelado.*mes.*passado/.test(pergunta.toLowerCase())) {
-      const total = cancelamentos.filter(c => c.data.startsWith(mesAnteriorStr)).reduce((acc, cur) => acc + cur.valor, 0);
-      resposta = `No mês passado foram cancelados ${formatarMoeda(total)}.`;
-    } else if (/empresa.*rod[ií]zio/.test(pergunta.toLowerCase())) {
-      const empresas = [...new Set(cancelamentos.filter(c => c.item.toLowerCase().includes("rodízio") || c.item.toLowerCase().includes("rodizio")).map(c => c.empresa))];
-      resposta = empresas.length ? `Empresas com cancelamentos de rodízio: ${empresas.join(", ")}` : "Nenhuma empresa teve cancelamentos de rodízio.";
-    } else if (/valor.*rod[ií]zio/.test(pergunta.toLowerCase())) {
-      const total = cancelamentos.filter(c => c.item.toLowerCase().includes("rodízio") || c.item.toLowerCase().includes("rodizio")).reduce((acc, cur) => acc + cur.valor, 0);
-      resposta = `O valor total dos cancelamentos de rodízio foi ${formatarMoeda(total)}.`;
+  const totalPorMes = (mes) =>
+    cancelamentos
+      .filter(c => c.data.startsWith(mes))
+      .reduce((acc, cur) => acc + cur.valor, 0);
+
+  if (/cancelado.*mes.*passado/.test(pergunta)) {
+    resposta = `No mês passado foram cancelados ${formatarMoeda(totalPorMes(mesAnteriorStr))}.`;
+  } else if (/cancelado.*este.*mes/.test(pergunta)) {
+    resposta = `Neste mês foram cancelados ${formatarMoeda(totalPorMes(mesAtual))}.`;
+  } else if (/qual.*empresa.*mais.*cancelou/.test(pergunta)) {
+    const totais = {};
+    cancelamentos.forEach(c => totais[c.empresa] = (totais[c.empresa] || 0) + c.valor);
+    const mais = Object.entries(totais).sort((a,b) => b[1]-a[1])[0];
+    resposta = `A empresa que mais cancelou foi ${mais[0]} com ${formatarMoeda(mais[1])}.`;
+  } else if (/cancelamento.*(mais|menos).*caro/.test(pergunta)) {
+    const ordenado = cancelamentos.sort((a,b) => b.valor - a.valor);
+    const maisCaro = ordenado[0];
+    const menosCaro = ordenado[ordenado.length - 1];
+    if (pergunta.includes("mais")) {
+      resposta = `O cancelamento mais caro foi ${maisCaro.item} em ${formatarDataBR(maisCaro.data)} no valor de ${formatarMoeda(maisCaro.valor)} (${maisCaro.empresa}).`;
+    } else {
+      resposta = `O cancelamento mais barato foi ${menosCaro.item} em ${formatarDataBR(menosCaro.data)} no valor de ${formatarMoeda(menosCaro.valor)} (${menosCaro.empresa}).`;
     }
-
-    adicionarMensagem("Assistente", resposta);
+  } else if (/cancelamento.*frequente/.test(pergunta)) {
+    const itens = {};
+    cancelamentos.forEach(c => {
+      const nome = c.item.split(" – ")[0].trim();
+      itens[nome] = (itens[nome] || 0) + 1;
+    });
+    const maisFrequente = Object.entries(itens).sort((a,b) => b[1]-a[1])[0];
+    resposta = `O item mais frequentemente cancelado foi "${maisFrequente[0]}", com ${maisFrequente[1]} ocorrências.`;
+  } else if (/cancelamento.*hoje/.test(pergunta)) {
+    const hoje = new Date().toISOString().slice(0,10);
+    const totalHoje = cancelamentos.filter(c => c.data === hoje).reduce((acc, c) => acc + c.valor, 0);
+    resposta = `Hoje foram cancelados ${formatarMoeda(totalHoje)}.`;
   }
+
+  adicionarMensagem("Assistente", resposta);
+}
+
 
   function adicionarMensagem(remetente, mensagem) {
     const chat = document.getElementById("chatMensagens");
