--- a/index.cancelamentos.html
+++ b/index.cancelamentos.html
@@ -118,53 +118,33 @@
       margin-top: 20px;
     }
 
-    /* Botão flutuante neon */
-   #botaoChatFlutuante {
+ #botaoChatFlutuante {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  padding: 12px 18px;
-  background: linear-gradient(135deg, #00f0ff, #a900ff); /* gradiente da logo */
+  width: 45px;
+  height: 45px;
+  background-color: #0B2240; /* cor da logo */
   color: white;
-  border: none;
+  font-size: 14px;
   font-weight: bold;
-  font-size: 16px;
   font-family: Arial, sans-serif;
-  text-shadow:
-    0 0 5px #fff,
-    0 0 10px #00f0ff,
-    0 0 20px #a900ff,
-    0 0 30px #a900ff;
-  box-shadow:
-    0 0 10px #00f0ff,
-    0 0 20px #a900ff,
-    0 0 30px #a900ff;
-  cursor: pointer;
-  z-index: 9999;
+  border: none;
   border-radius: 50%;
-  width: 60px;
-  height: 60px;
   display: flex;
   align-items: center;
   justify-content: center;
-  animation: pulsarNeon 2s infinite;
+  cursor: pointer;
+  z-index: 9999;
+  box-shadow: 0 0 8px rgba(11, 34, 64, 0.6), 0 0 12px rgba(11, 34, 64, 0.6);
+  text-shadow: 0 0 2px #fff;
+  transition: transform 0.2s ease;
 }
 
-/* Efeito pulsar */
-@keyframes pulsarNeon {
-  0%, 100% {
-    box-shadow:
-      0 0 5px #00f0ff,
-      0 0 15px #a900ff,
-      0 0 25px #a900ff;
-  }
-  50% {
-    box-shadow:
-      0 0 15px #00f0ff,
-      0 0 25px #a900ff,
-      0 0 35px #a900ff;
-  }
+#botaoChatFlutuante:hover {
+  transform: scale(1.1);
 }
+
 
 
     #botaoChatFlutuante img {
