--- a/index.cancelamentos.html
+++ b/index.cancelamentos.html
@@ -386,7 +386,7 @@
     return true;
   });
 
-  let resposta = "Desculpe, não estendi, Nalbert esta me configurando ainda.";
+  let resposta = "Desculpe, não estendi, Nalbert está me configurando ainda.";
 
   if (pergunta.includes("últimos") || pergunta.includes("recentes")) {
     const ultimos = cancelamentos.slice(-5).reverse().map(c =>
