--- a/index.cancelamentos.html
+++ b/index.cancelamentos.html
@@ -197,7 +197,7 @@
 
 <!-- Botão Neon Flutuante -->
 <div id="botaoChatFlutuante" onclick="abrirAssistente()">
-  DV
+  Assistente do GRUPO DV
 </div>
 
 <!-- Assistente Virtual -->
