--- a/index.html
+++ b/index.html
@@ -197,6 +197,10 @@
   <div class="icon">✅</div>
   <h2>Aprovação de CAP</h2>
   </a>
+  <a class="card" href="index.abc.html">
+      <div class="icon">ABC</div>
+      <h2>ABC de Vendas</h2>
+    </a>
 
 
   </div>
